fix app height on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
 #App {
-	height: 100vh;
+	height: calc(var(--vh, 1vh) * 100);
 	display: flex;
 }
