--- a/client/src/features/chatApp/chat.scss
+++ b/client/src/features/chatApp/chat.scss
@@ -3,7 +3,6 @@
 // Styles for ChatSidebar, ChatHeader, Chats, MediaWrapper, MessageInput components are in their respected files.
 
 .ChatApp {
-	min-height: 100vh;
 	display: flex;
 	color: white;
 	min-width: 100vw;
@@ -18,7 +17,7 @@
 
 	.ChatMain {
 		flex: 1 1 0;
-		height: 100%;
+		// height: 100%;
 
 		.Empty {
 			display: flex;
@@ -58,7 +57,8 @@
 		.ChatWindow {
 			display: flex;
 			flex-direction: column;
-			height: 100vh;
+			// height: 100vh;
+			height: 100%;
 			width: fit-content;
 			position: relative;
 		}
