--- a/client/src/features/chatApp/containers/Chats.scss
+++ b/client/src/features/chatApp/containers/Chats.scss
@@ -9,6 +9,10 @@
 	border-right: 1px solid rgb(255, 0, 89);
 	overflow-y: scroll;
 
+	> * {
+		user-select: none;
+	}
+
 	@include for-tablet-portrait-up {
 		max-width: 400px;
 	}
