--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -11,12 +11,21 @@
 }
 body {
 	image-rendering: pixelated;
-	min-height: 100vh;
+	height: calc(var(--vh, 1vh) * 100);
+	min-height: -moz-available;
+	min-height: -webkit-fill-available;
+	min-height: fill-available;
 	background: linear-gradient(to top, transparent, transparent),
 		url(../public/images/background-image-hifi-less-green-smaller.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
+
+html {
+	height: fill-available;
+	height: -webkit-fill-available;
+}
+
 @font-face {
 	// from https://int10h.org/oldschool-pc-fonts/
 	font-family: "IBM VGA 8x14";
